<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="false"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:text="@string/State"
        android:textSize="26dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="6dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/on"
            android:textSize="32dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/yuriy_qr"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/off"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/qrview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:text="@string/Code"
        android:textSize="32dp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/in"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/qrview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/Standart"
        android:textSize="32dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ReadSTD"
        android:textSize="32dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/yuriy_qr"
        />


</LinearLayout>
